# nexhacks-2026

./: .gitignore  Nex-pull-data.json  README.md  deploy.sh  docker-compose.yml  n8n-data-inject.json  n8n_data_inject.json
DOCS/: API Endpoint Not Responding.md  API Token Not Working.md  Backend API Error.md  CI_CD Pipeline Failure.md  Cisco IOS Vpn issue.md  DHCP Issue.md  Database Migration Error.md  Database Migration.md  Docker Context.md  Environment Variable Not Loading.md  Front End Build Failure.md  Front End ENV Failure.md  Fronted Caching - Stale Build.md  GIT Handling.md  Hot Reload.md  Local Build.md  Password Reset.md  Reboot Server.md  SOFTWARE_GUIDELINES.md  Tell em to reboot.md  VPN Connection Issues.md  Web application reboot.md  default gateway.md  inter-vlan routing issue.md  port down.md  vlan issue.md
ai-backend/: Dockerfile  main.py  pyproject.toml
discord_bot_js/: Dockerfile  index.js  package-lock.json  package.json
nginx/: nginx.conf
ticket-backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
ticket-backend/app/: __init__.py  tasks.py
ticket-backend/app/events/: __init__.py  publisher.py
ticket-backend/app/models/: __init__.py  base.py  content.py  enums.py  ticket.py
ticket-backend/app/queues/: __init__.py  manager.py
ticket-backend/app/routes/: __init__.py  distribution.py  queues.py  tickets.py
ticket-backend/app/services/: __init__.py  ai_client.py  user_service.py  webhook_service.py
ticket-backend/app/storage/: __init__.py  repository.py
ticket-backend/app/websockets/: __init__.py  manager.py
(+36 files in other folders)
